--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,44 @@
 body {
   margin: 0;
+
   font-family: -apple-system, BlinkMacSystemFont,
     "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
     "Cantarell", "Fira Sans", "Droid Sans",
     "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #2a0944;
+  background-color: rgb(0, 30, 60);
+}
+.MuiFormLabel-root.Mui-focused {
+  color: green !important;
+}
+.MuiFormLabel-root {
+  color: white !important;
+  font-weight: bold !important;
+}
+
+.PrivateSwitchBase-input {
+  border-color: white !important;
+}
+.MuiFormControlLabel-root.MuiFormControlLabel-labelPlacementEnd {
+  color: white !important;
+}
+.MuiButtonBase-root.MuiIconButton-root.MuiIconButton-edgeEnd {
+  color: white !important;
+}
+input {
+  color: white !important;
+}
+textarea {
+  color: white !important;
+}
+.MuiOutlinedInput-root
+  .MuiOutlinedInput-notchedOutline {
+  border-color: white !important;
+}
+.MuiOutlinedInput-root.Mui-focused
+  .MuiOutlinedInput-notchedOutline {
+  border-color: green !important;
 }
 
 code {
